Generics met MijnLijstje en CreateItem

--- a/GenericsDemo/GenericsDemo.Tests/GenericsDemo.Tests.csproj
+++ b/GenericsDemo/GenericsDemo.Tests/GenericsDemo.Tests.csproj
@@ -62,6 +62,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MijnLijstje.cs" />
+    <Compile Include="Persoon.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
