--- a/GenericsDemo/GenericsDemo/GenericsDemo.csproj
+++ b/GenericsDemo/GenericsDemo/GenericsDemo.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MijnLijstje.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
