--- a/GenericsDemo/GenericsDemo.Tests/GenericsDemo.Tests.csproj
+++ b/GenericsDemo/GenericsDemo.Tests/GenericsDemo.Tests.csproj
@@ -57,7 +57,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -66,6 +68,7 @@
     <Compile Include="Persoon.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortedListTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GenericsDemo\GenericsDemo.csproj">
