--- a/GenericsDemo/GenericsDemo/GenericsDemo.csproj
+++ b/GenericsDemo/GenericsDemo/GenericsDemo.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="MijnLijstje.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortedList.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
